--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;500;600;700;800&display=swap');
 @import "tailwindcss";
 @import "./accessibility.css";
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 :root {
-  --font-poppins: 'Poppins', sans-serif;
-  
+  --font-nunito-sans: 'Nunito Sans', sans-serif;
+}
+
+body {
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 html {
